<resources>
    <string name="app_name">ShiftworkManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">バイト先</string>
    <string name="nav_header_subtitle">workplace@workplace.co.jp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_requestshift">シフト申請</string>
    <string name="menu_requestlist">申請一覧</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requestContentText">シフト申請内容</string>
    <string name="selectDate">シフト申請日</string>
    <string name="startTime">開始時間</string>
    <string name="endTime">終了時間</string>
    <string name="request_text">申請</string>
    <string name="request_id_column_text">ID</string>
    <string name="request_workplace_column_text">申請先</string>
    <string name="request_date_column_text">申請日</string>
    <string name="request_time_column_text">申請時間</string>
    <string name="request_status_column_text">状況</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Password_hint">Password</string>
    <string name="Username_hint">Username</string>
    <string name="select_time">時間指定</string>
    <string name="btn_ok">OK</string>
    <string name="time_select">時間指定</string>
    <string name="start_time">開始時間</string>
    <string name="end_time">終了時間</string>
    <string name="btn_cancel">キャンセル</string>
</resources>